--- a/sarkeller.github.io/index.html
+++ b/sarkeller.github.io/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
-        <title>Hello World</title>
+        <title>fancy pancy</title>
     <body>
-        <p>keep on going</p>
+        <p>fancy pancy</p>
     </body>
 </html>
