add main.css and html changes

--- a/sarkeller.github.io/index.html
+++ b/sarkeller.github.io/index.html
@@ -1,7 +1,38 @@
 <html>
     <head>
-        <title>fancy pancy</title>
+        <title>America del Sud</title>
+    </head>
     <body>
-        <p>fancy pancy</p>
+        <h1>America del Sud</h1>
+        <p>Die Rucksäcke sind gepackt, auf gehts nach...</p>
+        <ul>
+          <li><a href=https://www.lonelyplanet.com/colombia>Kolumbien</a></li>
+          <li>Peru</li>
+          <li>Bolivien</li>
+          <li>Chile</li>
+          <li>Argentinien</li>
+        </ul>
+
+        <div>
+            <h2><a href="">My first post</a></h2>
+              <p>published: 31.12.2017, 12:14</p>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        </div>
+
+        <div>
+            <h2><a href="">My second post</a></h2>
+            <p>published: 14.06.2014, 12:14</p>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+        </div>
+        <div>
+            <h2><a href="">My third post</a></h2>
+            <p>published: 14.06.2014, 12:14</p>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+        </div>
+        <div>
+            <h2><a href="">My forth post</a></h2>
+            <p>published: 14.06.2014, 12:14</p>
+            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+        </div>
     </body>
 </html>
